fix: bottom spacing for radio widget title

--- a/projects/components/src/radio/radio-group.component.scss
+++ b/projects/components/src/radio/radio-group.component.scss
@@ -4,7 +4,7 @@
 .title {
   @include body-2-medium($gray-7);
   display: block;
-  padding-bottom: 11px;
+  padding-bottom: 8px;
 }
 
 .radio-group {
